2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnothello.c: (save_state):
	* properties.c: (apply_changes), (set_selection), (free_str),
	(fill_menu): some g_-ification that fixes some double-free bugs
	(Closes: #78130)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/iagno.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/iagno.xml : move to XML.

	* help/C/iagno-C.omf : move to XML.

	* help/C/iagno.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gnothello.c (about_cb): Don't try to translate empty string.

2002-01-09  Mark McLoughlin  <mark@skynet.ie>

	* gnothello.c: (load_pixmaps): add pre-condition.

2002-01-09  Mark McLoughlin  <mark@skynet.ie>

	* gnothello.c: (load_pixmaps):
	* properties.c: (load_properties), (reset_properties):
	fixup some gconf error handling.

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnothello.c, properties.c, othello.c: use the GameClock
	widget.

	* Makefile.am: don't build clock.[ch].

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnothello.c: (set_bg_color): make the grid dashed.
	(load_pixmaps): use GError.

	* properties.c: (load_properties), (reset_properties),
	(save_properties): quick port from gnome_config to gconf.

	* iagno.schemas: new file.

	* Makefile.am: install iagno.schemas.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* iagno.desktop:

	Install into the panel2 menus correctly.
	
2001-11-24  Kevin Vandersloot <kfv101@psu.edu>

	* othello.c, gnothello.c, clock.c: bring back clock
	functionality

2001-11-22  Elliot Lee  <sopwith@redhat.com>
        * iagno/{gnothello,network}.[ch]: Implement a sane networking mechanism.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* iagno.desktop: Added traditional Chinese translation.
