@@ -1,5 +1,11 @@
 2002-04-15  Bastien Nocera  <hadess@hadess.net>
 
+	* gnothello.c: (quit_game_cb), (about_cb):
+	* properties.c: (fill_menu), (show_properties_dialog):
+	don't use gnome_dialog_set_parent, show a nice icon in the about box
+
+2002-04-15  Bastien Nocera  <hadess@hadess.net>
+
 	* gnothello.c: (save_state):
 	* properties.c: (apply_changes), (set_selection), (free_str),
 	(fill_menu): some g_-ification that fixes some double-free bugs
